--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "@auth/authentication",
+  "name": "@nodeauth/authentication",
   "version": "0.0.1",
   "description": "Authentication",
-  "main": "Authentication.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.nc.test.js')"
+    "test": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.nc.test.js')",
+    "test-complete": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.complete.test.js')"
   },
   "keywords": [
     "authentication"
@@ -13,12 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.7.2",
-    "dotenv": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.6.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "dotenv": "^8.2.0",
+    "pg": "^8.6.0"
   }
 }
