--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@nodeauth/authentication",
-  "version": "0.0.1",
+  "version": "0.0.7",
   "description": "Authentication",
   "main": "src/index.js",
   "scripts": {
     "test": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.nc.test.js')",
-    "test-complete": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.complete.test.js')"
+    "test-complete": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.complete.test.js')",
+    "test-all": "export AUTH_ENV=dev && mocha --file src/tests/setup_test.js $(find src/tests/* -name '*.test.js')"
   },
   "keywords": [
     "authentication"
